<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.metamask.android.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
                android:id="@+id/action_FirstFragment_to_DappActionsFragment"
                app:destination="@id/DappActions" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.metamask.android.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
            android:id="@+id/DappActions"
            android:name="com.metamask.android.DappActions"
            android:label="@string/dapp_actions_fragment_label"
            tools:layout="@layout/fragment_dapp_actions">

        <action
                android:id="@+id/action_DappActions_to_SignFragment"
                app:destination="@id/SignFragment" />
        <action
                android:id="@+id/action_DappActions_to_SendTransactionFragment"
                app:destination="@id/SendTransactionFragment" />
        <action
                android:id="@+id/action_DappActions_to_SwitchChainFragment"
                app:destination="@id/SwitchChainFragment" />
    </fragment>

    <fragment
            android:id="@+id/SignFragment"
            android:name="com.metamask.android.SignMessageFragment"
            android:label="@string/sign"
            tools:layout="@layout/fragment_sign_message">
    </fragment>

    <fragment
            android:id="@+id/SendTransactionFragment"
            android:name="com.metamask.android.SendTransactionFragment"
            android:label="@string/send"
            tools:layout="@layout/fragment_send_transaction">
    </fragment>

    <fragment
            android:id="@+id/SwitchChainFragment"
            android:name="com.metamask.android.SwitchChainFragment"
            android:label="@string/switch_chain"
            tools:layout="@layout/fragment_switch_chain">
    </fragment>
</navigation>