<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">
    <Button
            android:id="@+id/connectButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connect"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/connectText"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="0dp"/>

    <TextView
            android:id="@+id/connectText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/connection_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/clearButton"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="12dp"/>

    <Button
            android:id="@+id/clearButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/clear_session"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/sessionText"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="0dp"/>

    <TextView
            android:id="@+id/sessionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/session_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/signButton"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="12dp"/>

    <Button
            android:id="@+id/signButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/signText"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="0dp"/>

    <TextView
            android:id="@+id/signText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/sign_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintBottom_toTopOf="@id/sendButton"
            app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginBottom="12dp"/>

    <Button
            android:id="@+id/sendButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@id/sendText"
            android:layout_marginBottom="0dp"/>

    <TextView
            android:id="@+id/sendText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/send_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="36dp"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="36dp" />
</androidx.constraintlayout.widget.ConstraintLayout>